Revision history for DBD::Oracle

{{$NEXT}}

  [DOCUMENTATION]
  - POD typos (RT#88285, RT#88284, Gregor Herrman).
  - Grooming of Hpux troubleshooting pod (GH#7, Martin J. Evans, 
    Yanick Champoux)

1.66      2013-08-23
  - promote 1.65_00 to stable.

1.65_00   2013-07-29

  [BUG FIXES]

  - Fix RT85886. The TYPE passed to bind_col is supposed to be sticky
  and it wasn't. Attributes passed to bind_col could be lost later if
  bind_col is called again without attributes. Both of these occur
  when fetchall_arrayref is called with a slice (Martin J. Evans).

  [DOCUMENTATION]

  - Fix a bunch of typos. [GH#5, David Steinbrunner]

1.64      2013-05-22
  - promote 1.63_00 to stable.

1.63_00   2013-05-03

  [ENHANCEMENTS]
  - DBD-Oracle: Use of uninitialized value $user_only in uc [RT#84657]
    (Steffen Goeldner)

  [BUG FIXES]
  - Make 50cursor.t Oracle8-friendly. (RT#84660, patch by Steffen Goeldner)
  - Makefile.PL's use of ACL tweaked for Suse Enterprise 11 SP2
        (RT#84530, patch by Alfred Nathaniel)

  [DOCUMENTATION]
  - Bogus 227 directory no longer required for MacOS. (GH#1, patch
    by theory)

1.62      2013-04-30
  - promote 1.61_00 to official release

1.61_00   2013-04-15

  [BUG FIXES]
  - Adjust the privs needed for the DROP/CREATE table test. [GH#35]
    (Joe Crotty)

  - Fixed RT84170 - when using scrollable cursors and you've done a
    positioned fetch and then keep fetching until the end of the
    result-set calls to fetch never return undef and you keep getting
    the last row forever. Also added test case to the 51scroll.t test
    (Martin J. Evans).

1.60      2013-04-01
 - Move github repository to github.com/pythian/DBD-Oracle.

1.58      2013-03-05
  - promote 1.57_00 to official release

1.57_00   2013-02-07
  [BUG FIXES]

  - fix RT46628 - bind_param_inout ORA_RSET causes MSWin32 access
    violation and RT82663 - Errors if a returned SYS_REFCURSOR is not
    opened (Martin J. Evans)
